[gd_scene load_steps=55 format=2]

[ext_resource path="res://Enemies/Walker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Mutants/WalkingMutant/Mutant.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Mutants/WalkingMutant/Mutant_1_sheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 510, 900, 170, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 510, 400, 170, 100 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 170, 100 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 170, 0, 170, 100 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 340, 0, 170, 100 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 900, 170, 100 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 170, 900, 170, 100 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 340, 900, 170, 100 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 510, 900, 170, 100 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 700, 170, 100 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 170, 700, 170, 100 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 340, 700, 170, 100 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 510, 700, 170, 100 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 680, 700, 170, 100 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 300, 170, 100 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 170, 300, 170, 100 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 340, 300, 170, 100 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 510, 300, 170, 100 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 680, 300, 170, 100 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 0, 500, 170, 100 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 170, 500, 170, 100 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 340, 500, 170, 100 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 0, 400, 170, 100 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 170, 400, 170, 100 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 340, 400, 170, 100 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 510, 400, 170, 100 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 0, 200, 170, 100 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 170, 200, 170, 100 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 340, 200, 170, 100 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 510, 200, 170, 100 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 680, 200, 170, 100 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 0, 600, 170, 100 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 170, 600, 170, 100 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 340, 600, 170, 100 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 510, 600, 170, 100 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 680, 600, 170, 100 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 850, 600, 170, 100 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 0, 800, 170, 100 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 170, 800, 170, 100 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 340, 800, 170, 100 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 510, 800, 170, 100 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 0, 100, 170, 100 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 170, 100, 170, 100 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 340, 100, 170, 100 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 510, 100, 170, 100 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 680, 100, 170, 100 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 850, 100, 170, 100 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "deadR",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "deadL",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idleL",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "dieR",
"speed": 8.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "attackR",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "hurtL",
"speed": 6.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "idleR",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "dieL",
"speed": 8.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 28 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "attackL",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "walkR",
"speed": 4.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": false,
"name": "hurtR",
"speed": 6.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "walkL",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=49]
radius = 16.0
height = 48.0

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 104, 56 )

[sub_resource type="CapsuleShape2D" id=51]
radius = 44.5768
height = 22.8464

[node name="Mutant" instance=ExtResource( 1 )]
script = ExtResource( 2 )
health = 4
collision_damage = 20.0
asymetrical = true

[node name="Sprite" parent="." index="0"]
frames = SubResource( 48 )
animation = "attackL"
frame = 6
offset = Vector2( -12, 0 )

[node name="Collider" parent="." index="1"]
position = Vector2( -3.75, 7.5 )
shape = SubResource( 49 )

[node name="FloorNormal" parent="." index="2"]
cast_to = Vector2( 0, 60 )

[node name="WalkTimer" type="Timer" parent="." index="3"]
wait_time = 5.0
one_shot = true

[node name="AttackWinddown" type="Timer" parent="." index="4"]
wait_time = 1.5
one_shot = true

[node name="PlayerDetectorCollider" parent="Hitboxes/PlayerDetector" index="0"]
position = Vector2( -96, 0 )
shape = SubResource( 50 )

[node name="AttackDetector" type="Area2D" parent="Hitboxes" index="1"]

[node name="AttackDetectorCollider" type="CollisionShape2D" parent="Hitboxes/AttackDetector" index="0"]
position = Vector2( -48, 8 )
rotation = 1.5708
shape = SubResource( 51 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="timeout" from="WalkTimer" to="." method="_on_WalkTimer_timeout"]
[connection signal="timeout" from="AttackWinddown" to="." method="_on_AttackWinddown_timeout"]
[connection signal="body_entered" from="Hitboxes/PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="Hitboxes/PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="body_entered" from="Hitboxes/AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="body_exited" from="Hitboxes/AttackDetector" to="." method="_on_AttackDetector_body_exited"]
